--- a/reference/TubePlayer/TubePlayer/TubePlayer.csproj
+++ b/reference/TubePlayer/TubePlayer/TubePlayer.csproj
@@ -23,7 +23,7 @@
 		<PackageReference Include="Uno.Toolkit.WinUI.Markup" />
 		<PackageReference Include="Uno.Extensions.Hosting.WinUI" />
 		<PackageReference Include="Uno.Extensions.Maui.WinUI" />
-		<!--<PackageReference Include="Uno.Extensions.Maui.WinUI.Markup" />-->
+		<PackageReference Include="Uno.Extensions.Maui.WinUI.Markup" />
 		<PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" />
 		<PackageReference Include="Uno.Extensions.Navigation.WinUI" />
 		<PackageReference Include="Uno.Extensions.Navigation.WinUI.Markup" />
