--- a/UI/MauiEmbedding/ArcGisApp/Directory.Build.props
+++ b/UI/MauiEmbedding/ArcGisApp/Directory.Build.props
@@ -63,6 +63,7 @@
 		<When Condition="$(TargetFramework.Contains('windows10'))">
 			<PropertyGroup>
 				<IsWinAppSdk>true</IsWinAppSdk>
+				<UseRidGraph>true</UseRidGraph>
 				<SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
 				<TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
 				<RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
