--- a/UI/MigrateCustomRenderers/MigrateRenderersSample/Directory.Build.props
+++ b/UI/MigrateCustomRenderers/MigrateRenderersSample/Directory.Build.props
@@ -50,6 +50,7 @@
 		<When Condition="$(TargetFramework.Contains('windows10'))">
 			<PropertyGroup>
 				<IsWinAppSdk>true</IsWinAppSdk>
+				<UseRidGraph>true</UseRidGraph>
 				<SupportedOSPlatformVersion>10.0.19041.0</SupportedOSPlatformVersion>
 				<TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
 			</PropertyGroup>
