--- a/reference/SimpleCalc/MVU-X-CSharp/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/SimpleCalc/MVU-X-CSharp/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -9,7 +9,7 @@
     <PublishProfile>win-$(Platform).pubxml</PublishProfile>
     <UseWinUI>true</UseWinUI>
     <EnableMsixTooling>true</EnableMsixTooling>
-    <!-- <EnableWindowsTargeting>true</EnableWindowsTargeting> -->
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
 
     <!-- Bundles the WinAppSDK binaries -->
     <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
