--- a/UI/UnoWCTDataGridSample/WCTTestbed2/WCTTestbed2.Windows/WCTTestbed2.Windows.csproj
+++ b/UI/UnoWCTDataGridSample/WCTTestbed2/WCTTestbed2.Windows/WCTTestbed2.Windows.csproj
@@ -1,32 +1,33 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
-    <TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
-    <RootNamespace>WCTTestbed2</RootNamespace>
-    <Platforms>x86;x64;arm64</Platforms>
-    <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
+		<TargetPlatformMinVersion>10.0.19041.0</TargetPlatformMinVersion>
+		<RootNamespace>WCTTestbed2</RootNamespace>
+		<Platforms>x86;x64;arm64</Platforms>
+		<RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
 		<UseRidGraph>true</UseRidGraph>
-    <PublishProfile>win10-$(Platform).pubxml</PublishProfile>
-    <DefaultLanguage>en</DefaultLanguage>
-    <UseWinUI>true</UseWinUI>
-    <EnableMsixTooling>true</EnableMsixTooling>
-    <WindowsPackageType>MSIX</WindowsPackageType>
-    <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
-  </PropertyGroup>
-  <ItemGroup>
-    <Content Include="Images\**" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231115000" />
-    <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.2428" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
-    <PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
-    <Manifest Include="$(ApplicationManifest)" />
-  </ItemGroup>
+		<PublishProfile>win10-$(Platform).pubxml</PublishProfile>
+		<DefaultLanguage>en</DefaultLanguage>
+		<UseWinUI>true</UseWinUI>
+		<EnableMsixTooling>true</EnableMsixTooling>
+		<WindowsPackageType>MSIX</WindowsPackageType>
+		<WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
+		<UseRidGraph>true</UseRidGraph>
+	</PropertyGroup>
+	<ItemGroup>
+		<Content Include="Images\**" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.4.231115000" />
+		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.2428" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
+		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
+		<Manifest Include="$(ApplicationManifest)" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\WCTTestbed2\WCTTestbed2.csproj" />
-  </ItemGroup>
-  <Import Project="..\WCTTestbed2.Base\base.props" />
+	<ItemGroup>
+		<ProjectReference Include="..\WCTTestbed2\WCTTestbed2.csproj" />
+	</ItemGroup>
+	<Import Project="..\WCTTestbed2.Base\base.props" />
 </Project>
