--- a/reference/TubePlayer/src/Directory.Packages.props
+++ b/reference/TubePlayer/src/Directory.Packages.props
@@ -8,8 +8,10 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
-    <PackageVersion Include="Uno.WinUI.MediaPlayer.Skia.Gtk" Version="5.2.0-dev.1825" />
-    <PackageVersion Include="Uno.WinUI.MediaPlayer.WebAssembly" Version="5.2.0-dev.1825" />
+    <PackageVersion Include="Uno.Extensions.Http.Refit" Version="4.1.0-dev.24" />
+    <PackageVersion Include="Uno.Extensions.Http.WinUI" Version="4.1.0-dev.24" />
+    <!--<PackageVersion Include="Uno.WinUI.MediaPlayer.Skia.Gtk" Version="5.2.0-dev.1825" />
+    <PackageVersion Include="Uno.WinUI.MediaPlayer.WebAssembly" Version="5.2.0-dev.1825" />-->
     <!--<PackageVersion Include="VideoLAN.LibVLC.Windows" Version="3.0.20" />-->
   </ItemGroup>
 </Project>
