--- a/reference/TubePlayer/src/TubePlayer/TubePlayer.csproj
+++ b/reference/TubePlayer/src/TubePlayer/TubePlayer.csproj
@@ -28,8 +28,10 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Uno.WinUI.MediaPlayer.Skia.Gtk" />
-    <PackageReference Include="Uno.WinUI.MediaPlayer.WebAssembly" />
+    <PackageReference Include="Uno.Extensions.Http.Refit" />
+    <PackageReference Include="Uno.Extensions.Http.WinUI" />
+    <!--<PackageReference Include="Uno.WinUI.MediaPlayer.Skia.Gtk" />
+    <PackageReference Include="Uno.WinUI.MediaPlayer.WebAssembly" />-->
     <!--<PackageReference Include="VideoLAN.LibVLC.Windows" />-->
   </ItemGroup>
 
