--- a/UI/ChatGPT/ChatGPT/Directory.Packages.props
+++ b/UI/ChatGPT/ChatGPT/Directory.Packages.props
@@ -24,9 +24,9 @@
     <PackageVersion Include="Uno.Resizetizer" Version="1.2.1" />
     <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.1.87" />
     <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
-    <PackageVersion Include="Uno.Wasm.Bootstrap" Version="9.0.0-dev.27" />
-    <PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="9.0.0-dev.27" />
-    <PackageVersion Include="Uno.Wasm.Bootstrap.Server" Version="9.0.0-dev.27" />
+    <PackageVersion Include="Uno.Wasm.Bootstrap" Version="8.0.11" />
+    <PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="8.0.11" />
+    <PackageVersion Include="Uno.Wasm.Bootstrap.Server" Version="8.0.11" />
     <PackageVersion Include="Uno.WinUI" Version="5.1.87" />
     <PackageVersion Include="Uno.WinUI.Lottie" Version="5.1.87" />
     <PackageVersion Include="Uno.WinUI.Markup" Version="5.1.5" />
