--- a/reference/TubePlayer/src/TubePlayer/appsettings.development.json
+++ b/reference/TubePlayer/src/TubePlayer/appsettings.development.json
@@ -1,5 +1,14 @@
-﻿{
+{
   "AppConfig": {
-    "Environment": "Development"
+    "Title": "TubePlayer"
+  },
+  "YoutubeEndpoint": {
+    "Url": "https://youtube.googleapis.com/youtube/v3",
+    "ApiKey": "your_development_api_key",
+    "UseNativeHandler": true
+  },
+  "YoutubePlayerEndpoint": {
+    "Url": "https://www.youtube.com/youtubei/v1",
+    "UseNativeHandler": true
   }
 }
