--- a/reference/TubePlayer/src/TubePlayer/appsettings.json
+++ b/reference/TubePlayer/src/TubePlayer/appsettings.json
@@ -1,14 +1,5 @@
 {
   "AppConfig": {
-    "Title": "TubePlayer"
-  },
-  "YoutubeEndpoint": {
-    "Url": "https://youtube.googleapis.com/youtube/v3",
-    "ApiKey": "",
-    "UseNativeHandler": true
-  },
-  "YoutubePlayerEndpoint": {
-    "Url": "https://www.youtube.com/youtubei/v1",
-    "UseNativeHandler": true
+    "Environment": "Development"
   }
 }
