--- a/reference/TubePlayer/src/TubePlayer/TubePlayer.csproj
+++ b/reference/TubePlayer/src/TubePlayer/TubePlayer.csproj
@@ -1,11 +1,13 @@
 <Project Sdk="Uno.Sdk">
   <PropertyGroup>
     <TargetFrameworks>
-      $(DotNetVersion)-browserwasm;
-      $(DotNetVersion)-android;
-      $(DotNetVersion)-maccatalyst;
-      $(DotNetVersion)-windows10.0.19041;
-      $(DotNetVersion)-desktop;
+      net8.0-browserwasm;
+      net8.0-android;
+      net8.0-ios;
+      net8.0-maccatalyst;
+      net8.0-windows10.0.19041;
+      net8.0-desktop;
+      net8.0;
     </TargetFrameworks>
 
     <OutputType>Exe</OutputType>
