--- a/reference/TubePlayer/Directory.Packages.props
+++ b/reference/TubePlayer/Directory.Packages.props
@@ -1,48 +1,10 @@
 <Project ToolsVersion="15.0">
+  <!--
+    Note that the $(UnoVersion) comes from the Uno.Sdk. You should not update it manually. To update the version of Uno,
+    you should instead update the Sdk version in the global.json file.
+
+    See https://aka.platform.uno/upgrade-uno-packages for more information.
+  -->
   <ItemGroup>
-    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.Windows.Compatibility" Version="8.0.0" />
-    <PackageVersion Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.3233" />
-    <PackageVersion Include="Microsoft.WindowsAppSDK" Version="1.5.240311000" />
-    <PackageVersion Include="SkiaSharp.Skottie" Version="2.88.7" />
-    <PackageVersion Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.7" />
-    <PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
-    <PackageVersion Include="Uno.Extensions.Configuration" Version="4.0.0" />
-    <PackageVersion Include="Uno.Extensions.Hosting" Version="3.0.8" />
-    <PackageVersion Include="Uno.Extensions.Hosting.WinUI" Version="4.0.0" />
-    <PackageVersion Include="Uno.Extensions.Http.Refit" Version="4.0.0" />
-    <PackageVersion Include="Uno.Extensions.Http.WinUI" Version="4.0.0" />
-    <PackageVersion Include="Uno.Extensions.Logging.OSLog" Version="1.7.0" />
-    <PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.7.0" />
-    <PackageVersion Include="Uno.Extensions.Navigation" Version="3.0.8" />
-    <PackageVersion Include="Uno.Extensions.Navigation.WinUI" Version="4.0.0" />
-    <PackageVersion Include="Uno.Extensions.Navigation.Toolkit.WinUI" Version="4.0.0" />
-    <PackageVersion Include="Uno.Extensions.Reactive" Version="3.0.8" />
-    <PackageVersion Include="Uno.Extensions.Reactive.WinUI" Version="4.0.0" />
-    <PackageVersion Include="Uno.Material.WinUI" Version="4.0.6" />
-    <PackageVersion Include="Uno.Dsp.Tasks" Version="1.2.8" />
-    <PackageVersion Include="Uno.Toolkit.WinUI" Version="5.0.11" />
-    <PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="5.0.17" />
-    <PackageVersion Include="Uno.Resizetizer" Version="1.2.1" />
-    <PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.1.87" />
-    <PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
-    <PackageVersion Include="Uno.Wasm.Bootstrap" Version="8.0.11" />
-    <PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="8.0.11" />
-    <PackageVersion Include="Uno.Wasm.Bootstrap.Server" Version="8.0.11" />
-    <PackageVersion Include="Uno.WinUI" Version="5.1.87" />
-    <PackageVersion Include="Uno.WinUI.Lottie" Version="5.1.87" />
-    <PackageVersion Include="Uno.WinUI.Markup" Version="5.1.5" />
-    <PackageVersion Include="Uno.Toolkit.WinUI.Markup" Version="5.0.17" />
-    <PackageVersion Include="Uno.Extensions.Navigation.WinUI.Markup" Version="4.0.0" />
-    <PackageVersion Include="Uno.Extensions.Reactive.WinUI.Markup" Version="4.0.0" />
-    <PackageVersion Include="Uno.Material.WinUI.Markup" Version="4.0.6" />
-    <PackageVersion Include="Uno.Themes.WinUI.Markup" Version="4.0.6" />
-    <PackageVersion Include="Uno.WinUI.DevServer" Version="5.1.87" />
-    <PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="5.1.87" />
-    <PackageVersion Include="Uno.WinUI.WebAssembly" Version="5.1.87" />
-    <PackageVersion Include="Xamarin.Google.Android.Material" Version="1.10.0.2" />
-    <PackageVersion Include="Uno.WinUI.MediaPlayer.Skia.Gtk" Version="5.1.87" />
-    <PackageVersion Include="VideoLAN.LibVLC.Windows" Version="3.0.20" />
-    <PackageVersion Include="Uno.WinUI.MediaPlayer.WebAssembly" Version="5.1.87" />
   </ItemGroup>
 </Project>
