--- a/reference/ToDo/ToDo/ToDo.csproj
+++ b/reference/ToDo/ToDo/ToDo.csproj
@@ -53,10 +53,25 @@
   <ItemGroup>
     <None Remove="appsettings.development.json" />
     <None Remove="appsettings.json" />
+    <None Remove="Mock\lists.json" />
+    <None Remove="Mock\profilePicture.json" />
+    <None Remove="Mock\tasks.json" />
+    <None Remove="Strings\en\Resources.resw" />
+    <None Remove="Strings\es\Resources.resw" />
+    <None Remove="Strings\fr\Resources.resw" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="appsettings.development.json" />
     <EmbeddedResource Include="appsettings.json" />
+    <EmbeddedResource Include="Mock\lists.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mock\profilePicture.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mock\tasks.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" />
