--- a/UI/SplashScreenSample/SplashScreenSample.Mobile/SplashScreenSample.Mobile.csproj
+++ b/UI/SplashScreenSample/SplashScreenSample.Mobile/SplashScreenSample.Mobile.csproj
@@ -14,6 +14,7 @@
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net8.0-macos'">osx-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Uno.Toolkit.WinUI" Version="5.1.7" />
     <PackageReference Include="Uno.WinUI" Version="5.1.87" />
     <PackageReference Include="Uno.WinUI.DevServer" Version="5.1.87" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.1.87" />
