--- a/UI/SplashScreenSample/SplashScreenSample.Skia.WPF/SplashScreenSample.Skia.WPF.csproj
+++ b/UI/SplashScreenSample/SplashScreenSample.Skia.WPF/SplashScreenSample.Skia.WPF.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Uno.WinUI.DevServer" Version="5.1.87" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.1.87" />
     <PackageReference Include="Uno.WinUI.Lottie" Version="5.1.87" />
+    <PackageReference Include="Uno.Toolkit.WinUI" Version="5.1.7" />
     <PackageReference Include="SkiaSharp.Skottie" Version="2.88.7" />
     <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.7" />
   </ItemGroup>
