--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ Resource.Designer.cs
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
+.DS_Store
 
 # Build results
 [Dd]ebug[-\w]*/
