--- a/reference/TubePlayer/TubePlayer/TubePlayer.csproj
+++ b/reference/TubePlayer/TubePlayer/TubePlayer.csproj
@@ -1,76 +1,59 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Uno.Sdk">
   <PropertyGroup>
-    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows')) or '$(EnableWindowsTargeting)' == 'true'">$(TargetFrameworks);net8.0-windows10.0.19041</TargetFrameworks>
-    <TargetFrameworks>$(TargetFrameworks);net8.0;net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
-    <TargetFrameworks Condition="'$(OverrideTargetFrameworks)'!=''">$(OverrideTargetFrameworks)</TargetFrameworks>
+    <TargetFrameworks>
+      net8.0-android;
+      net8.0-ios;
+      net8.0-maccatalyst;
+      net8.0-windows10.0.19041;
+      net8.0-desktop;
+      net8.0-browserwasm;
+    </TargetFrameworks>
 
-    <!-- Ensures the .xr.xml files are generated in a proper layout folder -->
-    <GenerateLibraryLayout>true</GenerateLibraryLayout>
+    <OutputType>Exe</OutputType>
+    <UnoSingleProject>true</UnoSingleProject>
+
+    <!-- Display name -->
+    <ApplicationTitle>TubePlayer</ApplicationTitle>
+    <!-- App Identifier -->
+    <ApplicationId>com.companyname.TubePlayer</ApplicationId>
+    <!-- Versions -->
+    <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
+    <ApplicationVersion>1</ApplicationVersion>
+    <!--
+      If you encounter this error message:
+
+        error NETSDK1148: A referenced assembly was compiled using a newer version of Microsoft.Windows.SDK.NET.dll.
+        Please update to a newer .NET SDK in order to reference this assembly.
+
+      This means that the two packages below must be aligned with the "build" version number of
+      the "Microsoft.Windows.SDK.BuildTools" package above, and the "revision" version number
+      must be the highest found in https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref.
+    -->
+    <!-- <WindowsSdkPackageVersion>10.0.22621.28</WindowsSdkPackageVersion> -->
+
+    <!--
+      UnoFeatures let's you quickly add and manage implicit package references based on the features you want to use.
+      https://aka.platform.uno/singleproject-features
+    -->
+    <UnoFeatures>
+      CSharpMarkup;
+      Material;
+      Hosting;
+      Toolkit;
+      Mvux;
+      Configuration;
+      Navigation;
+      Http;
+      MediaElement;
+    </UnoFeatures>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Uno.Extensions.Http.Refit" />
-    <PackageReference Include="Uno.Extensions.Http.WinUI" />
-    <PackageReference Include="Uno.WinUI" />
-    <PackageReference Include="Uno.Resizetizer" />
-    <PackageReference Include="Uno.WinUI.Markup" />
-    <PackageReference Include="Uno.Material.WinUI.Markup" />
-    <PackageReference Include="Uno.Themes.WinUI.Markup" />
-    <PackageReference Include="Uno.Extensions.Configuration" />
-    <PackageReference Include="Uno.Material.WinUI" />
-    <PackageReference Include="Uno.Dsp.Tasks" />
-    <PackageReference Include="Uno.Toolkit.WinUI.Material" />
-    <PackageReference Include="Uno.Toolkit.WinUI.Markup" />
-    <PackageReference Include="Uno.Extensions.Hosting.WinUI" />
-    <PackageReference Include="Uno.Extensions.Navigation.Toolkit.WinUI" />
-    <PackageReference Include="Uno.Extensions.Navigation.WinUI" />
-    <PackageReference Include="Uno.Extensions.Navigation.WinUI.Markup" />
-    <PackageReference Include="Uno.Extensions.Reactive.WinUI" />
-    <PackageReference Include="Uno.Extensions.Reactive.WinUI.Markup" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" />
+    <None Remove="Assets\Icons\back.svg" />
+    <None Remove="Assets\navigation_bar.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <UnoImage Include="Assets\Icons\back.svg" />
+    <UnoImage Include="Assets\navigation_bar.svg" />
   </ItemGroup>
 
-
-  <Choose>
-    <When Condition="$(IsWinAppSdk)">
-      <PropertyGroup>
-        <!--
-        If you encounter this error message:
-
-          error NETSDK1148: A referenced assembly was compiled using a newer version of Microsoft.Windows.SDK.NET.dll.
-          Please update to a newer .NET SDK in order to reference this assembly.
-
-        This means that the two packages below must be aligned with the "build" version number of
-        the "Microsoft.Windows.SDK.BuildTools" package above, and the "revision" version number
-        must be the highest found in https://www.nuget.org/packages/Microsoft.Windows.SDK.NET.Ref.
-        -->
-        <!-- <WindowsSdkPackageVersion>10.0.22621.28</WindowsSdkPackageVersion> -->
-      </PropertyGroup>
-      <ItemGroup>
-        <PackageReference Include="Microsoft.WindowsAppSDK" />
-        <PackageReference Include="Microsoft.Windows.SDK.BuildTools" />
-      </ItemGroup>
-    </When>
-    <Otherwise>
-      <ItemGroup>
-        <PackageReference Include="Uno.WinUI.Lottie" />
-        <PackageReference Include="Uno.WinUI.DevServer" Condition="'$(Configuration)'=='Debug'" />
-
-        <!-- Include all images by default - matches the __WindowsAppSdkDefaultImageIncludes property in the WindowsAppSDK -->
-        <Content Include="Assets\**;**/*.png;**/*.bmp;**/*.jpg;**/*.dds;**/*.tif;**/*.tga;**/*.gif" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder);**\*.svg" />
-        <Page Include="**\*.xaml" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder)" />
-        <Compile Update="**\*.xaml.cs">
-          <DependentUpon>%(Filename)</DependentUpon>
-        </Compile>
-        <PRIResource Include="**\*.resw" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder)" />
-      </ItemGroup>
-    </Otherwise>
-  </Choose>
-
-  <ItemGroup>
-    <UnoDspImportColors Include="Styles\*.zip" Generator="CSharp" />
-    <UnoImage Include="Assets\**\*.svg" />
-    <EmbeddedResource Include="appsettings.json" />
-    <EmbeddedResource Include="appsettings.*.json" DependentUpon="appsettings.json" />
-  </ItemGroup>
 </Project>
