--- a/reference/Counter/XAML-MVUX/.editorconfig
+++ b/reference/Counter/XAML-MVUX/.editorconfig
@@ -9,11 +9,26 @@ root = true
 ##########################################
 
 [*]
-indent_style = space
+indent_style = tab
 end_of_line = crlf
 trim_trailing_whitespace = true
 insert_final_newline = true
 charset = utf-8
+dotnet_style_coalesce_expression = true:suggestion
+dotnet_style_null_propagation = true:suggestion
+dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
+dotnet_style_prefer_auto_properties = true:silent
+dotnet_style_object_initializer = true:suggestion
+dotnet_style_collection_initializer = true:suggestion
+dotnet_style_prefer_simplified_boolean_expressions = true:suggestion
+dotnet_style_prefer_conditional_expression_over_assignment = true:silent
+dotnet_style_prefer_conditional_expression_over_return = true:silent
+dotnet_style_explicit_tuple_names = true:suggestion
+dotnet_style_prefer_inferred_tuple_names = true:suggestion
+dotnet_style_operator_placement_when_wrapping = beginning_of_line
+tab_width = 4
+indent_size = 4
+dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
 
 ##########################################
 # File Extension Settings
@@ -41,7 +56,6 @@ end_of_line = lf
 indent_size = 2
 
 [*.xaml]
-indent_size = 2
 charset = utf-8-bom
 
 [*.xml]
